Changement d'un "è" par "é"

--- a/reglement.html
+++ b/reglement.html
@@ -29,7 +29,7 @@
             <main class="ma">
 
                 <div class="titre">
-                    <h1>Règlement</h1>
+                    <h1>Réglement</h1>
                 </div>
 
                 <div class="regbox">
