delete de la balise </a> en trop ligne 197 à 199

--- a/flotte.html
+++ b/flotte.html
@@ -194,9 +194,9 @@
 				<!-- Icons -->
 				<div class="icons">
 					<a style="text-decoration:none;" href="https://twitter.com/home?lang=fr"> <img class="icon" src="images/twi.png" alt="Twitter"> </a>
-					<a style="text-decoration:none;" href="https://www.facebook.com/"> </a><img class="icon" src="images/fb.png" alt="Facebook"> </a>
-					<a style="text-decoration:none;" href="https://www.instagram.com/cosmo_cruise/"> </a><img class="icon" src="images/insta.png" alt="Instagram"> </a>
-					<a style="text-decoration:none;" href="https://fr.linkedin.com/"> </a><img class="icon" src="images/link.png" alt="Linkedin"> </a>
+					<a style="text-decoration:none;" href="https://www.facebook.com/"> <img class="icon" src="images/fb.png" alt="Facebook"> </a>
+					<a style="text-decoration:none;" href="https://www.instagram.com/cosmo_cruise/"> <img class="icon" src="images/insta.png" alt="Instagram"> </a>
+					<a style="text-decoration:none;" href="https://fr.linkedin.com/"> <img class="icon" src="images/link.png" alt="Linkedin"> </a>
 				</div>
 
 				<!-- Menu -->
