--- a/activités.html
+++ b/activités.html
@@ -119,10 +119,10 @@
 			<footer id="footer">
 
                 <div class="icons">
-					<a style="text-decoration:none;" href="https://twitter.com/home?lang=fr%22%3E"> <img class="icon" src="images/twi.png" alt="Twitter"> </a>
-					<a style="text-decoration:none;" href="https://www.facebook.com/%22%3E"> <img class="icon" src="images/fb.png" alt="Facebook"> </a>
-					<a style="text-decoration:none;" href="https://www.instagram.com/cosmo_cruise/%22%3E"> <img class="icon" src="images/insta.png" alt="Instagram"> </a>
-					<a style="text-decoration:none;" href="https://fr.linkedin.com/%22%3E"> <img class="icon" src="images/link.png" alt="Linkedin"> </a>
+					<a style="text-decoration:none;" href="https://twitter.com/home?lang=fr>" <img class="icon" src="images/twi.png" alt="Twitter"> </a>
+					<a style="text-decoration:none;" href="https://www.facebook.com>" <img class="icon" src="images/fb.png" alt="Facebook"> </a>
+					<a style="text-decoration:none;" href="https://www.instagram.com/cosmo_cruise>" <img class="icon" src="images/insta.png" alt="Instagram"> </a>
+					<a style="text-decoration:none;" href="https://fr.linkedin.com>" <img class="icon" src="images/link.png" alt="Linkedin"> </a>
 				</div>
 
 				<!-- Menu -->
